--- a/module_home/src/main/res/values/strings.xml
+++ b/module_home/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="home_app_name">module_home</string>
+    <string name="home_tv_login">登录</string>
+    <string name="home_hint_search">请输入关键字搜索</string>
 </resources>
