增加权限库

--- a/library_base/src/main/res/values-en/strings.xml
+++ b/library_base/src/main/res/values-en/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="base_app_name">wanandroid</string>
+    <string name="base_error_data">An error occurred. Please click Retry</string>
 </resources>
