--- a/library_base/src/main/res/values/strings.xml
+++ b/library_base/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="base_app_name">wanandroid</string>
+    <string name="base_error_data">出错了,请重新点击重试</string>
 </resources>
