完成首页列表

--- a/library_base/src/main/res/values-en/strings.xml
+++ b/library_base/src/main/res/values-en/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="base_app_name">wanandroid</string>
     <string name="base_error_data">An error occurred. Please click Retry</string>
+    <string name="base_success_copylink">Success copy Link</string>
 </resources>
