--- a/module_home/src/main/res/values-en/strings.xml
+++ b/module_home/src/main/res/values-en/strings.xml
@@ -2,4 +2,8 @@
     <string name="home_app_name">module_home</string>
     <string name="home_tv_login">Login</string>
     <string name="home_hint_search">Please enter keyword search</string>
+    <string name="home_opensource_internallink">Domestic agent link</string>
+    <string name="home_opensource_abroadlink">GitHub link</string>
+    <string name="home_top_sticky">Topping</string>
+    <string name="home_toparticle_foot">See more</string>
 </resources>
