--- a/module_main/src/main/res/values-en/strings.xml
+++ b/module_main/src/main/res/values-en/strings.xml
@@ -5,4 +5,5 @@
     <string name="main_project">Project</string>
     <string name="main_navigate">Navigate</string>
     <string name="main_mine">Mine</string>
+    <string name="main_exit_tip">Press again to exitwanandroid App</string>
 </resources>
