--- a/module_main/src/main/res/values/strings.xml
+++ b/module_main/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="main_project">项目</string>
     <string name="main_navigate">导航</string>
     <string name="main_mine">我的</string>
+    <string name="main_exit_tip">再按一次退出wanandroid App</string>
 </resources>
