--- a/module_mine/src/main/res/values/strings.xml
+++ b/module_mine/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="mine_tv_register">注册</string>
     <string name="mine_emptyusername_hint">账号不能为空</string>
     <string name="mine_emptypassword_hint">密码不能为空</string>
+    <string name="mine_request_login">登录中...</string>
 </resources>
