--- a/module_set/src/main/res/values/strings.xml
+++ b/module_set/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">module_set</string>
+    <string name="set_app_name">module_set</string>
+    <string name="set_basic">基本设置</string>
+    <string name="set_dark_mode">深色模式</string>
+    <string name="set_dark_close">已关闭</string>
+    <string name="set_status_theme">状态栏着色</string>
 </resources>
