--- a/module_set/src/main/res/values/strings.xml
+++ b/module_set/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="set_common">通用设置</string>
     <string name="set_more_language">多语言</string>
     <string name="set_changetextsize">字体大小</string>
+    <string name="set_gesture_password">设置手势密码</string>
+    <string name="set_clear_cache">清除缓存</string>
+    <string name="set_other">其他</string>
+    <string name="set_project_repository">本项目仓库</string>
 </resources>
