--- a/module_set/src/main/res/values-en/strings.xml
+++ b/module_set/src/main/res/values-en/strings.xml
@@ -18,4 +18,9 @@
     <string name="set_clear_cache">Clear cache</string>
     <string name="set_other">Other</string>
     <string name="set_project_repository">Warehouse of the project</string>
+    <string name="set_official_website">Official website</string>
+    <string name="set_about_wanandroid">About wanandroid</string>
+    <string name="set_quit_account">Sign out</string>
+    <string name="set_confirm_logout">Exit current account</string>
+    <string name="set_logout">Quit...</string>
 </resources>
