完善登录退出逻辑 完善Eventbus逻辑

--- a/module_home/src/main/res/values-en/strings.xml
+++ b/module_home/src/main/res/values-en/strings.xml
@@ -6,4 +6,5 @@
     <string name="home_opensource_abroadlink">GitHub link</string>
     <string name="home_top_sticky">Topping</string>
     <string name="home_toparticle_foot">See more</string>
+    <string name="home_biometric_cancel">Cancel</string>
 </resources>
