--- a/module_home/src/main/res/values/strings.xml
+++ b/module_home/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="home_opensource_abroadlink">Github链接</string>
     <string name="home_top_sticky">置顶</string>
     <string name="home_toparticle_foot">查看更多</string>
+    <string name="home_biometric_cancel">取消</string>
 </resources>
