--- a/module_mine/src/main/res/values/strings.xml
+++ b/module_mine/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="mine_blomtric_cancel">取消</string>
     <string name="mine_nodata_gradle">等级 -</string>
     <string name="mine_nodata_rank">排名第 -</string>
+    <string name="mine_request_loading">请稍等...</string>
 </resources>
