--- a/module_square/src/main/res/values/strings.xml
+++ b/module_square/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="square_app_name">module_square</string>
+    <string name="square_share_article_title">文章标题</string>
+    <string name="square_max_length_hint">100字以内</string>
+    <string name="square_article_link">文章链接</string>
 </resources>
