新增标签界面

--- a/library_base/src/main/res/values/strings.xml
+++ b/library_base/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="base_error_data">出错了,请重新点击重试</string>
     <string name="base_success_copylink">已成功复制链接</string>
     <string name="base_loading">请求中...</string>
+    <string name="base_unavailable_text">网络连接不可用,请检查网络设置</string>
 
 </resources>
