--- a/module_navigate/src/main/res/values/strings.xml
+++ b/module_navigate/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="navigate_app_name">module_navigate</string>
+    <string name="navigate_hierachy_tab_navigate">导航</string>
+    <string name="navigate_hierachy_tab_hierachy">体系</string>
 </resources>
