--- a/module_mine/src/main/res/values/strings.xml
+++ b/module_mine/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
         &#8195 &#8195(1)、每天仅第一篇会增加积分，避免不必要分享。<br/>
         &#8195 &#8195(2)、基数默认为 10，每个基数对应最大值为 10 + 29，然后基数增加为 11 ，从 11 + 0 ~ 11 + 29 ，周而复始。<br/>
     ]]></Data></string>
+    <string name="mine_confirm_cancelarticle">是否取消收藏此文章</string>
 
 </resources>
