--- a/module_set/src/main/res/values/strings.xml
+++ b/module_set/src/main/res/values/strings.xml
@@ -39,6 +39,7 @@
     <string name="set_night_mode">夜间模式设置</string>
     <string name="set_night_mode_save">保存</string>
     <string name="set_nightauto_mode_success">设置成功</string>
+    <string name="set_changetextsize_tip">拖动下面的滑块，可设置字体大小</string>
 
 
 </resources>
