1.完成字体大小改变

--- a/module_set/src/main/res/values/strings.xml
+++ b/module_set/src/main/res/values/strings.xml
@@ -40,6 +40,7 @@
     <string name="set_night_mode_save">保存</string>
     <string name="set_nightauto_mode_success">设置成功</string>
     <string name="set_changetextsize_tip">拖动下面的滑块，可设置字体大小</string>
+    <string name="set_changetextsize_save">保存</string>
 
 
 </resources>
