--- a/module_set/src/main/res/values-en/strings.xml
+++ b/module_set/src/main/res/values-en/strings.xml
@@ -40,4 +40,5 @@
     <string name="set_night_mode_save">Save</string>
     <string name="set_nightauto_mode_success">Setting Success</string>
     <string name="set_changetextsize_tip">Drag the slider below to set the font size</string>
+    <string name="set_changetextsize_save">Save</string>
 </resources>
