--- a/module_square/src/main/res/values-en/strings.xml
+++ b/module_square/src/main/res/values-en/strings.xml
@@ -21,4 +21,5 @@
     <string name="square_share_addcoins">Daily first share plus points</string>
     <string name="square_every_one_search">Everyone is searching</string>
     <string name="square_new_sharearticle">Latest share</string>
+    <string name="square_question">Q &amp; A</string>
 </resources>
