--- a/module_set/src/main/res/values/strings.xml
+++ b/module_set/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="set_no_update_version">暂无版本更新</string>
     <string name="set_privacy_protocol">隐私政策</string>
     <string name="set_suser_ervice_protocol">软件许可及服务协议</string>
+    <string name="set_user_name">用户名</string>
+    <string name="set_user_email">邮箱</string>
 </resources>
